--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link rel="preload" href="./borpa_files/gtm.js" as="script"><meta name="theme-color" content="#019118"><title>BorpaToken - The Next Generation Memecoin</title><meta name="description" content="BorpaToken is the next generation of memecoins, fairly distributing its supply through a deflationary financial game."><meta name="keywords" content="Meme,Crypto,DeFi,Web3,Token,Borpa"><meta property="og:title" content="BorpaToken - The Next Generation Memecoin"><meta property="og:description" content="BorpaToken is the next generation of memecoins, fairly distributing its supply through a deflationary financial game."><meta property="og:url" content="https://borpatoken.com/"><meta property="og:site_name" content="BorpaToken"><meta property="og:image" content="https://borpatoken.com/images/preview.jpg"><meta property="og:type" content="website"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:title" content="BorpaToken - The Next Generation Memecoin"><meta name="twitter:description" content="BorpaToken is the next generation of memecoins, fairly distributing its supply through a deflationary financial game."><meta name="twitter:image" content="https://borpatoken.com/images/preview.jpg"><link rel="icon" href="https://www.borpatoken.com/favicon.ico" type="image/x-icon" sizes="16x16"><meta name="next-size-adjust"><script src="./borpa_files/polyfills-78c92fac7aa8fdd8.js" nomodule=""></script>
 
-<script charset="UTF-8" async type="text/javascript" src="./165c21cde917.88177e818aab.js"></script>
+<script charset="UTF-8" async type="text/javascript" src="./39d-a249c2c.js"></script>
 
 <style type="text/css">
 @font-face {
